add file data/data_series_tec_first_derivative.pkl.xz and data/data_series_tec_second_derivative.pkl.xz to the .gitignore because the limitaion of size from github

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@
 *.swo
 
 data/data_series_tec.pkl.xz
+data/data_series_tec_first_derivative.pkl.xz
+data/data_series_tec_second_derivative.pkl.xz
 
 __pycache__/*
 
